--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         <div class="container">
             <p>&copy; 2023 CV Maker: PDF Resume Builder. All rights reserved.</p>
             <p>
-                <a href="./privacy.md">Privacy Policy</a> |
+                <a href="https://thefaisalurrehman.github.io/cv-resume-maker-privacy/">Privacy Policy</a> |
                 <a href="mailto:faisaldeveloper493@icloud.com">Contact Support</a>
             </p>
         </div>
