--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="CV Preparation: Resume Builder – Your complete AI career partner. Create professional resumes, practice interview questions, and get AI-generated answers to boost your confidence and performance." />
+    <meta name="description" content="Ai : Resume builder, Cv Maker – Your complete AI career partner. Create professional resumes, practice interview questions, and get AI-generated answers to boost your confidence and performance." />
     <meta name="keywords" content="AI Resume Builder, CV Maker, AI Interview Coach, Behavioral Interview Answers, Technical Interview Practice, Resume Templates, Career Preparation, Job Interview Assistant, Mock Interview App, AI Career Assistant" />
     <title>CV Preparation: Resume Builder – AI Interview & Resume Partner</title>
 
