--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Ai : Resume builder, Cv Maker – Your complete AI career partner. Create professional resumes, practice interview questions, and get AI-generated answers to boost your confidence and performance." />
-    <meta name="keywords" content="AI Resume Builder, CV Maker, AI Interview Coach, Behavioral Interview Answers, Technical Interview Practice, Resume Templates, Career Preparation, Job Interview Assistant, Mock Interview App, AI Career Assistant" />
+    <meta name="description" content="Cv Maker Ai 2025 – Your complete AI career partner. Create professional cv / resumes, practice interview questions, and get AI-generated answers to boost your confidence and performance." />
+    <meta name="keywords" content="Cv Maker Ai 2025, AI Interview Coach, Behavioral Interview Answers, Technical Interview Practice, Resume Templates, Career Preparation, Job Interview Assistant, Mock Interview App, AI Career Assistant" />
     <title>CV Preparation: Resume Builder – AI Interview & Resume Partner</title>
 
     <!-- Tailwind CSS CDN -->
@@ -166,7 +166,7 @@
     <section class="py-16 bg-app-navy">
         <div class="container mx-auto max-w-4xl px-4 text-center">
             <h2 class="text-3xl font-bold text-app-gold mb-4">Ready to Get Hired?</h2>
-            <p class="text-xl text-gray-200 mb-8">Stop stressing over the job search. Download CV Preparation today and start preparing for success.</p>
+            <p class="text-xl text-gray-200 mb-8">Stop stressing over the job search. Download Cv Maker 2025 today and start preparing for success.</p>
             <a href="https://apps.apple.com/app/id6753736007" class="inline-flex items-center space-x-3 bg-app-gold text-app-navy px-8 py-4 rounded-xl font-bold text-lg shadow-lg hover:bg-yellow-500 transition duration-300 transform hover:scale-[1.02]">
                 <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" class="h-6 w-auto invert"/>
                 <span>Download Now</span>
@@ -177,7 +177,7 @@
     <!-- Footer -->
     <footer class="bg-app-dark-bg text-gray-400 text-center py-8">
         <div class="container mx-auto px-4">
-            <p class="mb-2">&copy; 2025 CV Preparation: Resume Builder. All rights reserved.</p>
+            <p class="mb-2">&copy; 2025 CV Maker Ai. All rights reserved.</p>
             <p class="space-x-4">
                 <a href="https://thefaisalurrehman.github.io/cv-resume-maker-privacy/" class="text-app-gold hover:text-white font-medium">Privacy Policy</a>
                 <span class="text-gray-600">|</span>
