--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Cv Maker Ai 2025 – Your complete AI career partner. Create professional cv / resumes, practice interview questions, and get AI-generated answers to boost your confidence and performance." />
     <meta name="keywords" content="Cv Maker Ai 2025, AI Interview Coach, Behavioral Interview Answers, Technical Interview Practice, Resume Templates, Career Preparation, Job Interview Assistant, Mock Interview App, AI Career Assistant" />
-    <title>CV Preparation: Resume Builder – AI Interview & Resume Partner</title>
+    <title>Best Cv Maker Ai 2025 – According to HR</title>
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
